// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshots 1`] = `
<a
  aria-current="page"
  class="active"
  href="/"
/>
`;

exports[`Matches snapshots 2`] = `
<a
  aria-current="page"
  class="-dr-pogodin-react-utils_____tests__-shared-components-NavLink-styles___navLink___CYxNuq active"
  href="/"
/>
`;
